--- a/_publications/2019-07-17-caronte.md
+++ b/_publications/2019-07-17-caronte.md
@@ -4,6 +4,6 @@ collection: publications
 permalink: /publication/2019-07-17-caronte
 date: 2019-07-17
 venue: '2019 IEEE European Symposium on Security and Privacy Workshops (EuroS&PW) - 1st Workshop on Attackers and Cyber-Crime Operations'
-paperurl: 'https://ieeexplore.ieee.org/abstract/document/8802484'
+link: 'https://ieeexplore.ieee.org/abstract/document/8802484'
 authors: 'Campobasso, M., Burda, P., Allodi, L.'
 ---
