--- a/_teaching/2019-ocs.md
+++ b/_teaching/2019-ocs.md
@@ -5,4 +5,5 @@ permalink: /teaching/2019-offensive-cyber-security
 start-date: 2019-11-01
 end-date: 
 course: "Offensive Computer Security (2IC80)"
+course_page: "https://lallodi.github.io/teaching/"
 ---
