--- a/_publications/2020-08-20-impaas.md
+++ b/_publications/2020-08-20-impaas.md
@@ -2,7 +2,7 @@
 title: "Impersonation-as-a-Service: Characterizing the Emerging Criminal Infrastructure for User Impersonation at Scale"
 collection: publications
 permalink: /publication/2020-11-10-impaas
-extra_info: "(acceptance rate: 18%)."
+REMOVED_extra_info: "(acceptance rate: 18%)."
 date: 2020-11-10
 venue: 'In Proceedings of the 2020 ACM SIGSAC Conference on Computer and Communications Security (CCS ’20)'
 pre_print_link: 'https://arxiv.org/pdf/2009.04344.pdf'
