added articles and small edit to style

--- a/_publications/2020-08-20-impaas.md
+++ b/_publications/2020-08-20-impaas.md
@@ -10,6 +10,11 @@ authors: 'Campobasso, M., Allodi, L.'
 abstract: "In this paper we provide evidence of an emerging criminal infrastructure enabling impersonation attacks at scale. Impersonation-as-a-Service (IMPaaS) allows attackers to systematically collect and enforce user profiles (consisting of user credentials, cookies, device and behavioural fingerprints, and other metadata) to circumvent risk-based authentication system and effectively bypass multi-factor authentication mechanisms. We present the ImpaaS model and evaluate its implementation by analysing the operation of a large, invite-only, Russian ImpaaS platform providing user profiles for more than 260'000 Internet users worldwide. Our findings suggest that the ImpaaS model is growing, and provides the mechanisms needed to systematically evade authentication controls across multiple platforms, while providing attackers with a reliable, up-to-date, and semi-automated environment enabling target selection and user impersonation against Internet users as scale."
 main_outcomes: "We presented the IMPaaS model as a novel threat enabling attackers to perform user impersonation at scale. IMPaaS is supported by an emergent criminal infrastructure that control the supply chain of user profiles, from system infection to profile acquisition and commodification. Criminals produce fingerprints from compromised hosts, which are bundles of information containing credentials, cookies, history and behavioral metadata of the victim, allowing attackers to seamlessly reproduce a user's \"appearance\" in front of an authentication system. Such fingerprints are available on the IMPaaS platform for prices ranging from a few to hundreds of USD, depending on the wealth of the country of the victim, the amount of available accounts available and which accounts are contained. From our analysis, we identify a strong correlation in the price with the presence of credentials for banking websites, cryptocurrency exchanges and e-commerce accounts. In addition, our research provided further evidences supporting the claim that undergound platform operators are actively monitoring crawling activities and take measures to limit them."
 #image: /assets/images/fingerprinting-1.png
-press: [["https://www.tue.nl/en/news/news-overview/22-10-2020-researchers-tue-find-huge-and-sophisticated-black-market-for-trade-in-online-fingerprints/", "[<span class=\"flag-icon flag-icon-gb\" style=\"font-size: 17px\"></span>] TUe.nl - Researchers TU/e find huge and sophisticated black market for trade in online ‘fingerprints’"], ["https://www.tue.nl/nieuws/nieuwsoverzicht/22-10-2020-onderzoekers-tue-vinden-enorme-zwarte-markt-voor-handel-in-online-fingerprints/", "[<span class=\"flag-icon flag-icon-nl\" style=\"font-size: 17px\"></span>] TUe.nl - Onderzoekers TU/e vinden enorme zwarte markt voor handel in online ‘fingerprints’"], ["https://www.ed.nl/eindhoven/russen-handelen-op-marktplaats-in-gestolen-online-identiteiten-ontdekten-eindhovense-onderzoekers~a9163c5e/", "[<span class=\"flag-icon flag-icon-nl\" style=\"font-size: 17px\"></span>] ED.nl - Russen handelen op ‘marktplaats’ in gestolen online identiteiten, ontdekten Eindhovense onderzoekers"], ["https://www.ed.nl/eindhoven/onderzoekers-tu-e-vinden-illegale-russische-marktplaats-voor-online-profielen~ae0b4390/", "[<span class=\"flag-icon flag-icon-nl\" style=\"font-size: 17px\"></span>] ED.nl - Onderzoekers TU/e vinden illegale Russische marktplaats voor online profielen"], ["https://tweakers.net/nieuws/173872/onderzoekers-vinden-website-die-fingerprints-as-a-service-aanbiedt.html", "[<span class=\"flag-icon flag-icon-nl\" style=\"font-size: 17px\"></span>] Tweakers.net - Onderzoekers vinden website die 'fingerprints-as-a-service' aanbiedt"], ["https://innovationorigins.com/large-scale-criminal-online-marketplace-in-user-profiles/", "[<span class=\"flag-icon flag-icon-gb\" style=\"font-size: 17px\"></span>] InnovationOrigins.com - Large-scale criminal online market in user profiles"]]
+press: [["https://www.tue.nl/en/news/news-overview/22-10-2020-researchers-tue-find-huge-and-sophisticated-black-market-for-trade-in-online-fingerprints/", "en", "TU/e - Researchers TU/e find huge and sophisticated black market for trade in online ‘fingerprints’"], ["https://innovationorigins.com/large-scale-criminal-online-marketplace-in-user-profiles/", "en", "InnovationOrigins.com - Large-scale criminal online market in user profiles"], ["https://www.tue.nl/nieuws/nieuwsoverzicht/22-10-2020-onderzoekers-tue-vinden-enorme-zwarte-markt-voor-handel-in-online-fingerprints/", "nl", "TU/e - Onderzoekers TU/e vinden enorme zwarte markt voor handel in online ‘fingerprints’"], ["https://portal.rtvmonitor.nl/#/summary/0589db89-b791-4b09-a181-0811f09d08b3?token=K0UxWEhuVnNoVUdZaGc5a1hSQmEvWTNSZW0yeWRta0lvaXYvT3oxMW96MVdNNVEvKzBZRTVSV2hTa3ZlTzFpSjVvb1kwdkIzMGtXZmZEWDJUUk43SmZNZG5pZ0d5Y2crVXZHMWJoTEw4VlNSZ2VUbXRQazJRV3pYeWRGVzZ3UXJpQitGL0J1ZENERT01", "nl", "<i class=\"fa fa-podcast fa-lg\" aria-hidden=\"true\"></i> NPO Radio 1 - Radio EenVandaag"], ["https://eenvandaag.avrotros.nl/item/dit-is-waarom-criminelen-betalen-om-jouw-typesnelheid-en-muisbewegingen-te-weten-te-komen/", "nl", "NPO Radio 1 - Radio EenVandaag (web) - Waarom cybercriminelen nu zelfs uit zijn op hoe snel je typt, je beeldschermgrootte en muisbewegingen"], ["https://portal.rtvmonitor.nl/#/summary/5c655ba0-3549-4242-95b7-12e65bea1f77?token=K0UxWEhuVnNoVUdZaGc5a1hSQmEvWTNSZW0yeWRta0lvaXYvT3oxMW96MVdNNVEvKzBZRTVSV2hTa3ZlTzFpSjVvb1kwdkIzMGtXZmZEWDJUUk43SlZldWdLcllzZnBtU2o0U081ank5VDcyQ1VheTMvZHFOU2dMVGtzTjVpUjhUaEdORUlRTUdJTT01", "nl", "<i class=\"fa fa-podcast fa-lg\" aria-hidden=\"true\"></i> Radio 538"], ["https://portal.rtvmonitor.nl/#/summary/c8d367df-2d76-4c34-91a3-418cddfc38c2?token=K0UxWEhuVnNoVUdZaGc5a1hSQmEvWTNSZW0yeWRta0lvaXYvT3oxMW96MVdNNVEvKzBZRTVSV2hTa3ZlTzFpSjVvb1kwdkIzMGtXZmZEWDJUUk43SlpodDd0YTY3U2xVa0tGeVdQQmJPZTljYVRkZThPMENRMG52UVNQa1NGK3FJUElzNDJRakIxOD01", "nl", "<i class=\"fa fa-podcast fa-lg\" aria-hidden=\"true\"></i> QMusic"], ["https://www.ed.nl/eindhoven/russen-handelen-op-marktplaats-in-gestolen-online-identiteiten-ontdekten-eindhovense-onderzoekers~a9163c5e/", "nl", "Eindhovens Dagblad - Russen handelen op ‘marktplaats’ in gestolen online identiteiten, ontdekten Eindhovense onderzoekers"], ["https://www.ed.nl/eindhoven/onderzoekers-tu-e-vinden-illegale-russische-marktplaats-voor-online-profielen~ae0b4390/", "nl", "Eindhovens Dagblad - Onderzoekers TU/e vinden illegale Russische marktplaats voor online profielen"], ["https://tweakers.net/nieuws/173872/onderzoekers-vinden-website-die-fingerprints-as-a-service-aanbiedt.html", "nl", "Tweakers.net - Onderzoekers vinden website die 'fingerprints-as-a-service' aanbiedt"], ["https://www.rtlnieuws.nl/tech/artikel/5192926/data-gegevens-wachtwoorden-nederlanders-marktplaats-fingerprint", "nl", "RTL Nieuws - Data duizenden Nederlanders verhandeld op criminele marktplaats"], ["https://www.rd.nl/vandaag/binnenland/gegevens-van-duizenden-nederlanders-verhandeld-op-marktplaats-1.1707730", "nl", "Reformatorisch Dagblad - 
+Gegevens van duizenden Nederlanders verhandeld op marktplaats"], ["https://studio040.nl/nieuws/artikel/tue-legt-russische-handel-in-online-identiteiten-bloot", "nl", "Studio 040 - TU/e legt Russische handel in digitale 'fingerprints' bloot"], ["https://www.nd.nl/nieuws/varia/999476/gegevens-van-duizenden-nederlanders-verhandeld-op-marktplaats", "nl", "Nederlands Dagblad - Gegevens van duizenden Nederlanders verhandeld op marktplaats"], ["https://www.technischweekblad.nl/nieuws/onderzoekers-tu-e-vinden-enorme-zwarte-markt-in-online-fingerprints", "nl", "Technisch Weekblad - Onderzoekers TU/e vinden enorme zwarte markt in online ‘fingerprints’"], ["https://www.computable.nl/artikel/nieuws/security/7083260/250449/cybercrimineel-koopt-amper-tech-marktplaats.html", "nl", "Computable - Marktplaats nog geen techparadijs voor cybercrimineel"], ["https://www.trouw.nl/binnenland/tu-eindhoven-spoort-handel-op-in-online-vingerafdrukken~b91811a4/", "nl", "Trouw - TU Eindhoven spoort handel op in online vingerafdrukken"], ["https://www.hartvannederland.nl/nieuws/2020/onderzoekers-tu-eindhoven-ontdekken-website-handel-profielen/", "nl", "Hart van Nederland - TU Eindhoven ontdekt Russische website voor handel in online vingerafdrukken"], ["https://www.rtlnieuws.nl/tech/artikel/5192713/onderzoekers-tu-eindhoven-ontdekken-site-met-handel-profielen", "nl", "RTL - 'Site met handel in profielen biedt toegang tot 260.000 accounts'"], ["https://www.bd.nl/eindhoven/onderzoekers-tu-e-vinden-illegale-russische-marktplaats-voor-online-profielen~ae0b4390/", "nl", Brabants Dagblad - Onderzoekers TU/e vinden illegale Russische marktplaats voor online profielen"]]
 database: https://security1.win.tue.nl/doku.php?id=artefacts#data_sharing
 ---
+
+
+
+
