--- a/_publications/2020-08-20-impaas.md
+++ b/_publications/2020-08-20-impaas.md
@@ -5,7 +5,8 @@ permalink: /publication/2020-11-10-impaas
 extra_info: "<b>(Acceptance rate: 17%</b>, <b>mention in <a href=\"https://www.acm.org/media-center/2020/october/ccs-2020\">ACM CCS 2020 Highlights</a>)</b>"
 date: 2020-11-10
 venue: 'In Proceedings of the 2020 ACM SIGSAC Conference on Computer and Communications Security (CCS ’20)'
-pre_print_link: 'https://arxiv.org/pdf/2009.04344.pdf'
+open_access_link: 'https://arxiv.org/pdf/2009.04344.pdf'
+#publisher_link: 'https://dl.acm.org/doi/10.1145/3372297.3417892'
 authors: 'Campobasso, M., Allodi, L.'
 appendix_title: Model derivation of an emerging threat from underground market observations
 appendix_link: /publication/2020-11-10-impaas/appendix
