--- a/_publications/2020-08-20-impaas.md
+++ b/_publications/2020-08-20-impaas.md
@@ -7,7 +7,7 @@ date: 2020-11-10
 venue: 'In Proceedings of the 2020 ACM SIGSAC Conference on Computer and Communications Security (CCS ’20)'
 open_access_link: 'https://arxiv.org/pdf/2009.04344.pdf'
 publisher_link: 'https://dl.acm.org/doi/10.1145/3372297.3417892'
-authors: 'Campobasso, M., Allodi, L.'
+authors: '<b>Campobasso, M.</b>, Allodi, L.'
 appendix_title: Model derivation of an emerging threat from underground market observations
 appendix_link: /publication/2020-11-10-impaas/appendix
 video_link: "https://dl.acm.org/action/downloadSupplement?doi=10.1145%2F3372297.3417892&file=Copy+of+CCS2020_fpc510_Michele+Campobasso+-+Pat+Weeden.mov&download=true"
