typos and merging publications

--- a/_publications/2020-08-20-impaas.md
+++ b/_publications/2020-08-20-impaas.md
@@ -9,12 +9,12 @@ date: 2020-11-10
 venue: 'In Proceedings of the 2020 ACM SIGSAC Conference on Computer and Communications Security (CCS ’20)'
 open_access_link: 'https://arxiv.org/pdf/2009.04344.pdf'
 publisher_link: 'https://dl.acm.org/doi/10.1145/3372297.3417892'
-authors: 'Campobasso, M., Allodi, L.'
+authors: 'Campobasso, M.; Allodi, L.'
 appendix_title: Model derivation of an emerging threat from underground market observations
 appendix_link: /publication/2020-11-10-impaas/appendix
 video_link: "https://dl.acm.org/action/downloadSupplement?doi=10.1145%2F3372297.3417892&file=Copy+of+CCS2020_fpc510_Michele+Campobasso+-+Pat+Weeden.mov&download=true"
 abstract: "In this paper we provide evidence of an emerging criminal infrastructure enabling impersonation attacks at scale. Impersonation-as-a-Service (IMPaaS) allows attackers to systematically collect and enforce user profiles (consisting of user credentials, cookies, device and behavioural fingerprints, and other metadata) to circumvent risk-based authentication system and effectively bypass multi-factor authentication mechanisms. We present the ImpaaS model and evaluate its implementation by analysing the operation of a large, invite-only, Russian ImpaaS platform providing user profiles for more than 260'000 Internet users worldwide. Our findings suggest that the ImpaaS model is growing, and provides the mechanisms needed to systematically evade authentication controls across multiple platforms, while providing attackers with a reliable, up-to-date, and semi-automated environment enabling target selection and user impersonation against Internet users as scale."
-main_outcomes: "We presented the IMPaaS model as a novel threat enabling attackers to perform user impersonation at scale. IMPaaS is supported by an emergent criminal infrastructure that control the supply chain of user profiles, from system infection to profile acquisition and commodification. Criminals produce fingerprints from compromised hosts, which are bundles of information containing credentials, cookies, history and behavioral metadata of the victim, allowing attackers to seamlessly reproduce a user's \"appearance\" in front of an authentication system. Such fingerprints are available on the IMPaaS platform for prices ranging from a few to hundreds of USD, depending on the wealth of the country of the victim, the amount of available accounts available and which accounts are contained. From our analysis, we identify a strong correlation in the price with the presence of credentials for banking websites, cryptocurrency exchanges and e-commerce accounts. In addition, our research provided further evidences supporting the claim that undergound platform operators are actively monitoring crawling activities and take measures to limit them."
+main_outcomes: "We presented the IMPaaS model as a novel threat enabling attackers to perform user impersonation at scale. IMPaaS is supported by an emergent criminal infrastructure that control the supply chain of user profiles, from system infection to profile acquisition and commodification. Criminals produce fingerprints from compromised hosts, which are bundles of information containing credentials, cookies, history and behavioral metadata of the victim, allowing attackers to seamlessly reproduce a user's \"appearance\" in front of an authentication system. Such fingerprints are available on the IMPaaS platform for prices ranging from a few to hundreds of USD, depending on the wealth of the country of the victim, the amount of available accounts available and which accounts are contained. From our analysis, we identify a strong correlation in the price with the presence of credentials for banking websites, cryptocurrency exchanges and e-commerce accounts. In addition, our research provided further evidences supporting the claim that underground platform operators are actively monitoring crawling activities and take measures to limit them."
 #image: /assets/images/fingerprinting-1.png
 extra_section_title: "Appendix: Model derivation of an emerging threat from underground market observations"
 extra_section_content1: "In this appendix, we detail the process we employed to derive each step of the IMPaaS criminal model. Whereas generally threat identification and derivation originate from technical observations of malicious activity (e.g., through malware reverse engineering, botnet sinkholing, etc.), in this paper we derived the IMPaaS threat model from observational data coming from the underground ecosystem itself. As criminal business models advance, being able to \"reverse engineer\" those to derive a bigger-picture view of the threat ecosystem has clear value: it allows us to better understand the criminal processes sustaining threat development and innovation, and provides us with insights on technical criminal artifacts we may have not yet detected \"in the wild\". In the following we share the process we followed to derive the IMPaaS model described in the paper, and synthesized below.<br/>
@@ -22,7 +22,7 @@ extra_section_content1: "In this appendix, we detail the process we employed to 
 extra_section_fig1: "/assets/images/derivingthreat.png"
 extra_section_content2: "In the following, we describe how the model described in Figure 1 of the paper (reported below) has been derived from evidence collected following the strategy described above. <h3>The Impersonation-as-a-Service Model</h3>"
 extra_section_fig2: /assets/images/fingerprinting-1.png
-extra_section_content3: "<h3>Profile acquisition</h3> <p style=\"font-size: 0.85em\">IMPaaS.ru offers hundreds of thousands user profiles where each of them, according to the marketplace's wiki, represents a single victim <b>(A)</b>. As several security industry report from their investigations, to harvest this amount of user profiles, IMPaaS.ru was employing AZORult, an infostealer malware <b>(C)</b>. To get a glimpse in the fuctioning of the malware, we collected several samples available on different undergound communities in which we have a foothold; we consistently obtained a bundle containing a set of instructions, a payload generator and a C2 server. Then, we infected our test systems and observed the high-level functioning <b>(D)</b>. In addition, in a post of a prominent underground marketplace, IMPaaS.ru operators were seeking for collaborators that could provide substantial quantities of infected hosts to control <b>(B)</b>. The large amount of available user profiles on IMPaaS.ru and the IMPaaS.ru operators interactions on other prominent underground communities suggest that IMPaaS operators rely on large scale malware infections (provided by themselves, or from partnerships with PPI, EaaS, MaaS operators, or both), whose malware was AZORult (now dismissed), to fuel their market with user profiles.</p><h3>Profile selection</h3><p style=\"font-size: 0.85em\">Once obtained access to IMPaaS.ru, the customer has access to the list of available user profiles <b>(A)</b>. To better fit the needs of the customer, an advanced search tool allows to filter user profiles containing credentias for given websites, price range, country of infection, installation date and other parameters <b>(A)</b>. After the first user profile is bought, the customer can download a custom version of Chromium and a plugin that will enforce the acquired user profile in the browser <b>(A)</b>.</p><h3>Profile enforcement</h3><p style=\"font-size: 0.85em\">The combination of user profile, browser and plugin empower the customer to an attacker capable of successfully impersonate the victim <b>(A, B, E)</b>. From the market's wiki and from IMPaaS.ru operator's ads on affiliated communities, they claim that their solutions allow to reliably spoof the identity of a victim to the analytical systems employed from social and bank identity verification systems. <b>(B)</b>. To achieve this, IMPaaS.ru operators claim that they collect a wide set of information from the victim's host, including the ones that major banks, payment and online antifraud systems monitor. Further, they claim that once an attacker enforces the fingerprint via the plugin, this information is provided to those systems. <b>(B)</b>. From their claims, they're exploiting the ease of use introduced from usable security authentication mechanisms such as RBA to bypass potential second factor that may be triggered at login time. In addition, in the FAQ section of the market, they remark the importance of using unblacklisted and accurate SOCKS5 proxies to reproduce the geolocation of the victim <b>(A)</b>. The plugin natively provides support to tunnel traffic into a user-defined SOCKS5 proxy, greatly improving the success rate of the impersonation attack <b>(A)</b>. In addition to the economic considerations made in the paper regarding market's health, common only among established and serious underground markets, the market shows other signs of respectability. In fact, IMPaaS.ru operator's profiles in the affiliated (and sometimes prominent) communities have the status of \"verified sellers\" and come with a long message history <b>(B)</b>. In these messages, they provide updates about evolutions of the marketplace and actively interact with customers, offering support and information <b>(B, E)</b>. In these discussions, customers provide feedbacks to their peers about their experience; positive feedbacks are the majority. A minor portion of unsatisfied customers often complain about having bought a user profile that doesn't bypass 2FA or doesn't contain updated credentials <b>(E)</b>. To these claims, the IMPaaS.ru operators respond that in their ToS they specify that user profiles are sold \"as-is\", with no warranties on their content and how to analyze them before buying <b>(A, B)</b>. Nonetheless, IMPaaS.ru operators show their efforts in improving the quality of the service; to this extent, they implemented a feedback system for user profiles to better understand which profiles meet the quality required from customers <b>(A, E)</b>. To further incentivize customers in using it, they offer a 5% cashback on the value of the reviewed profile <b>(A, E)</b>. Finally, some Telegram channels created by IMPaaS.ru operators offer customers the chance to share their experiences and offer their techniques to cashing out victim's assets, often upon payment <b>(E)</b>.</p><h3>Conclusions</h3><p style=\"font-size: 0.85em\">From these observations, we derive Impersonation-as-a-Service as an emerging threat model to established authentication mechanisms. Albeit we didn't had on hand any user profile due to ethical concerns, the observable criminal ecosystem around this market offers convicing evidences that the IMPaaS model is emerging and can lead arbitrary attackers to successfully impersonate victims at scale. IMPaaS.ru clearly identifies strengths and limitations of the offered solution. Nonetheless, we believe that the existence of IMPaaS.ru, their business model and their presence on the market indicate a strong interest from customers and a proved being able  to support impersonation attacks at scale, offering the needed driving force for other and more sophisticated IMPaaS providers to appear in the cybercriminal panorama.</p>"
+extra_section_content3: "<h3>Profile acquisition</h3> <p style=\"font-size: 0.85em\">IMPaaS.ru offers hundreds of thousands user profiles where each of them, according to the marketplace's wiki, represents a single victim <b>(A)</b>. As several security industry report from their investigations, to harvest this amount of user profiles, IMPaaS.ru was employing AZORult, an infostealer malware <b>(C)</b>. To get a glimpse in the fuctioning of the malware, we collected several samples available on different underground communities in which we have a foothold; we consistently obtained a bundle containing a set of instructions, a payload generator and a C2 server. Then, we infected our test systems and observed the high-level functioning <b>(D)</b>. In addition, in a post of a prominent underground marketplace, IMPaaS.ru operators were seeking for collaborators that could provide substantial quantities of infected hosts to control <b>(B)</b>. The large amount of available user profiles on IMPaaS.ru and the IMPaaS.ru operators interactions on other prominent underground communities suggest that IMPaaS operators rely on large scale malware infections (provided by themselves, or from partnerships with PPI, EaaS, MaaS operators, or both), whose malware was AZORult (now dismissed), to fuel their market with user profiles.</p><h3>Profile selection</h3><p style=\"font-size: 0.85em\">Once obtained access to IMPaaS.ru, the customer has access to the list of available user profiles <b>(A)</b>. To better fit the needs of the customer, an advanced search tool allows to filter user profiles containing credentias for given websites, price range, country of infection, installation date and other parameters <b>(A)</b>. After the first user profile is bought, the customer can download a custom version of Chromium and a plugin that will enforce the acquired user profile in the browser <b>(A)</b>.</p><h3>Profile enforcement</h3><p style=\"font-size: 0.85em\">The combination of user profile, browser and plugin empower the customer to an attacker capable of successfully impersonate the victim <b>(A, B, E)</b>. From the market's wiki and from IMPaaS.ru operator's ads on affiliated communities, they claim that their solutions allow to reliably spoof the identity of a victim to the analytical systems employed from social and bank identity verification systems. <b>(B)</b>. To achieve this, IMPaaS.ru operators claim that they collect a wide set of information from the victim's host, including the ones that major banks, payment and online antifraud systems monitor. Further, they claim that once an attacker enforces the fingerprint via the plugin, this information is provided to those systems. <b>(B)</b>. From their claims, they're exploiting the ease of use introduced from usable security authentication mechanisms such as RBA to bypass potential second factor that may be triggered at login time. In addition, in the FAQ section of the market, they remark the importance of using unblacklisted and accurate SOCKS5 proxies to reproduce the geolocation of the victim <b>(A)</b>. The plugin natively provides support to tunnel traffic into a user-defined SOCKS5 proxy, greatly improving the success rate of the impersonation attack <b>(A)</b>. In addition to the economic considerations made in the paper regarding market's health, common only among established and serious underground markets, the market shows other signs of respectability. In fact, IMPaaS.ru operator's profiles in the affiliated (and sometimes prominent) communities have the status of \"verified sellers\" and come with a long message history <b>(B)</b>. In these messages, they provide updates about evolutions of the marketplace and actively interact with customers, offering support and information <b>(B, E)</b>. In these discussions, customers provide feedbacks to their peers about their experience; positive feedbacks are the majority. A minor portion of unsatisfied customers often complain about having bought a user profile that doesn't bypass 2FA or doesn't contain updated credentials <b>(E)</b>. To these claims, the IMPaaS.ru operators respond that in their ToS they specify that user profiles are sold \"as-is\", with no warranties on their content and how to analyze them before buying <b>(A, B)</b>. Nonetheless, IMPaaS.ru operators show their efforts in improving the quality of the service; to this extent, they implemented a feedback system for user profiles to better understand which profiles meet the quality required from customers <b>(A, E)</b>. To further incentivize customers in using it, they offer a 5% cashback on the value of the reviewed profile <b>(A, E)</b>. Finally, some Telegram channels created by IMPaaS.ru operators offer customers the chance to share their experiences and offer their techniques to cashing out victim's assets, often upon payment <b>(E)</b>.</p><h3>Conclusions</h3><p style=\"font-size: 0.85em\">From these observations, we derive Impersonation-as-a-Service as an emerging threat model to established authentication mechanisms. Albeit we didn't had on hand any user profile due to ethical concerns, the observable criminal ecosystem around this market offers convicing evidences that the IMPaaS model is emerging and can lead arbitrary attackers to successfully impersonate victims at scale. IMPaaS.ru clearly identifies strengths and limitations of the offered solution. Nonetheless, we believe that the existence of IMPaaS.ru, their business model and their presence on the market indicate a strong interest from customers and a proved being able  to support impersonation attacks at scale, offering the needed driving force for other and more sophisticated IMPaaS providers to appear in the cybercriminal panorama.</p>"
 
 press: [["https://www.acm.org/media-center/2020/october/ccs-2020", "en", <b>ACM CCS - CCS 2020 Highlights</b> - Latest In Cybersecurity Research Unveiled at ACM Conference on Computer and Communications Security], ["https://www.tue.nl/en/news/news-overview/22-10-2020-researchers-tue-find-huge-and-sophisticated-black-market-for-trade-in-online-fingerprints/", "en", "TU/e - Researchers TU/e find huge and sophisticated black market for trade in online ‘fingerprints’"], ["https://innovationorigins.com/large-scale-criminal-online-marketplace-in-user-profiles/", "en", "InnovationOrigins.com - Large-scale criminal online market in user profiles"], ["https://techxplore.com/news/2020-10-huge-sophisticated-black-online-fingerprints.html", "en", "TechXplore.com - Researchers find huge, sophisticated black market for trade in online fingerprints"], ["https://www.tue.nl/nieuws/nieuwsoverzicht/22-10-2020-onderzoekers-tue-vinden-enorme-zwarte-markt-voor-handel-in-online-fingerprints/", "nl", "TU/e - Onderzoekers TU/e vinden enorme zwarte markt voor handel in online ‘fingerprints’"], ["https://michelecampobasso.github.io/assets/misc/2021_CID_06_Pagina_64_65_Illegale_handel_in_fingerprints.pdf", "nl", "<i class=\"fa fa-newspaper-o fa-lg\" aria-hidden=\"true\"></i> Computer Idee - Uitsmijter - Illegale handel in online ‘fingerprints’"], ["https://portal.rtvmonitor.nl/#/summary/0589db89-b791-4b09-a181-0811f09d08b3?token=K0UxWEhuVnNoVUdZaGc5a1hSQmEvWTNSZW0yeWRta0lvaXYvT3oxMW96MVdNNVEvKzBZRTVSV2hTa3ZlTzFpSjVvb1kwdkIzMGtXZmZEWDJUUk43SmZNZG5pZ0d5Y2crVXZHMWJoTEw4VlNSZ2VUbXRQazJRV3pYeWRGVzZ3UXJpQitGL0J1ZENERT01", "nl", "<i class=\"fa fa-podcast fa-lg\" aria-hidden=\"true\"></i> NPO Radio 1 - Radio EenVandaag"], ["https://eenvandaag.avrotros.nl/item/dit-is-waarom-criminelen-betalen-om-jouw-typesnelheid-en-muisbewegingen-te-weten-te-komen/", "nl", "NPO Radio 1 - Radio EenVandaag (web) - Waarom cybercriminelen nu zelfs uit zijn op hoe snel je typt, je beeldschermgrootte en muisbewegingen"], ["https://portal.rtvmonitor.nl/#/summary/5c655ba0-3549-4242-95b7-12e65bea1f77?token=K0UxWEhuVnNoVUdZaGc5a1hSQmEvWTNSZW0yeWRta0lvaXYvT3oxMW96MVdNNVEvKzBZRTVSV2hTa3ZlTzFpSjVvb1kwdkIzMGtXZmZEWDJUUk43SlZldWdLcllzZnBtU2o0U081ank5VDcyQ1VheTMvZHFOU2dMVGtzTjVpUjhUaEdORUlRTUdJTT01", "nl", "<i class=\"fa fa-podcast fa-lg\" aria-hidden=\"true\"></i> Radio 538"], ["https://portal.rtvmonitor.nl/#/summary/c8d367df-2d76-4c34-91a3-418cddfc38c2?token=K0UxWEhuVnNoVUdZaGc5a1hSQmEvWTNSZW0yeWRta0lvaXYvT3oxMW96MVdNNVEvKzBZRTVSV2hTa3ZlTzFpSjVvb1kwdkIzMGtXZmZEWDJUUk43SlpodDd0YTY3U2xVa0tGeVdQQmJPZTljYVRkZThPMENRMG52UVNQa1NGK3FJUElzNDJRakIxOD01", "nl", "<i class=\"fa fa-podcast fa-lg\" aria-hidden=\"true\"></i> QMusic"], ["https://www.ed.nl/eindhoven/russen-handelen-op-marktplaats-in-gestolen-online-identiteiten-ontdekten-eindhovense-onderzoekers~a9163c5e/", "nl", "Eindhovens Dagblad - Russen handelen op ‘marktplaats’ in gestolen online identiteiten, ontdekten Eindhovense onderzoekers"], ["https://www.ed.nl/eindhoven/onderzoekers-tu-e-vinden-illegale-russische-marktplaats-voor-online-profielen~ae0b4390/", "nl", "Eindhovens Dagblad - Onderzoekers TU/e vinden illegale Russische marktplaats voor online profielen"], ["https://tweakers.net/nieuws/173872/onderzoekers-vinden-website-die-fingerprints-as-a-service-aanbiedt.html", "nl", "Tweakers.net - Onderzoekers vinden website die 'fingerprints-as-a-service' aanbiedt"], ["https://michelecampobasso.github.io/assets/misc/article_de_volkskrant.pdf", "nl", "<i class=\"fa fa-newspaper-o fa-lg\" aria-hidden=\"true\"></i> De Volkskrant Tech - Data duizenden Nederlanders op Russisch forum (bottom of page)"], ["https://www.volkskrant.nl/wetenschap/techblog-consumentenbond-daagt-waakhond-voor-rechter-in-google-zaak~b3095f2d/", "nl", "Volkskrant Tech - Gegevens van duizenden Nederlanders verhandeld op marktplaats"], ["https://www.fontys.nl/nieuws/omvangrijke-criminele-online-handel-in-gebruikersprofielen/", "nl", "Fontys.nl - Omvangrijke criminele online handel in gebruikersprofielen"], ["https://www.rtlnieuws.nl/tech/artikel/5192926/data-gegevens-wachtwoorden-nederlanders-marktplaats-fingerprint", "nl", "RTL Nieuws - Data duizenden Nederlanders verhandeld op criminele marktplaats"], ["https://www.rd.nl/vandaag/binnenland/gegevens-van-duizenden-nederlanders-verhandeld-op-marktplaats-1.1707730", "nl", "Reformatorisch Dagblad - 
 Gegevens van duizenden Nederlanders verhandeld op marktplaats"], ["https://studio040.nl/nieuws/artikel/tue-legt-russische-handel-in-online-identiteiten-bloot", "nl", "Studio 040 - TU/e legt Russische handel in digitale 'fingerprints' bloot"], ["https://www.nd.nl/nieuws/varia/999476/gegevens-van-duizenden-nederlanders-verhandeld-op-marktplaats", "nl", "Nederlands Dagblad - Gegevens van duizenden Nederlanders verhandeld op marktplaats"], ["https://www.technischweekblad.nl/nieuws/onderzoekers-tu-e-vinden-enorme-zwarte-markt-in-online-fingerprints", "nl", "Technisch Weekblad - Onderzoekers TU/e vinden enorme zwarte markt in online ‘fingerprints’"], ["https://www.computable.nl/artikel/nieuws/security/7083260/250449/cybercrimineel-koopt-amper-tech-marktplaats.html", "nl", "Computable - Marktplaats nog geen techparadijs voor cybercrimineel"], ["https://www.trouw.nl/binnenland/tu-eindhoven-spoort-handel-op-in-online-vingerafdrukken~b91811a4/", "nl", "Trouw - TU Eindhoven spoort handel op in online vingerafdrukken"], ["https://www.hartvannederland.nl/nieuws/2020/onderzoekers-tu-eindhoven-ontdekken-website-handel-profielen/", "nl", "Hart van Nederland - TU Eindhoven ontdekt Russische website voor handel in online vingerafdrukken"], ["https://www.rtlnieuws.nl/tech/artikel/5192713/onderzoekers-tu-eindhoven-ontdekken-site-met-handel-profielen", "nl", "RTL - 'Site met handel in profielen biedt toegang tot 260.000 accounts'"], ["https://www.bd.nl/eindhoven/onderzoekers-tu-e-vinden-illegale-russische-marktplaats-voor-online-profielen~ae0b4390/", "nl", Brabants Dagblad - Onderzoekers TU/e vinden illegale Russische marktplaats voor online profielen"], ["https://www.agconnect.nl/artikel/online-fingerprinthandel-blootgelegd-door-tu-eindhoven", "nl", "agConnect - Online-fingerprinthandel blootgelegd door TU Eindhoven"], ["https://www.vpngids.nl/nieuws/tu-eindhoven-stuit-op-zwarte-markt-voor-digitale-fingerprints/", "nl", VPNGids - TU Eindhoven stuit op zwarte markt voor digitale fingerprints], ["https://www.ictmagazine.nl/tu-e-ontdekt-enorme-zwarte-markt-voor-handel-in-online-fingerprints/", "nl", "ICT/magazine - TU/e ontdekt enorme zwarte markt voor handel in online fingerprints"], ["https://www.security.nl/posting/675689/Marktplaats+voor+gestolen+profile+laat+criminelen+RBA-systems+ bypass", "nl", "Security NL - Marktplaats voor gestolen profielgegevens laat criminelen RBA-systemen omzeilen"]]
