--- a/_publications/2019-07-17-caronte.md
+++ b/_publications/2019-07-17-caronte.md
@@ -3,7 +3,7 @@ title: "CARONTE: a Crawler for Adversarial Resources Over Non-Trusted, high-prof
 collection: publications
 permalink: /publication/2019-07-17-caronte
 date: 2019-07-17
-venue: 'In Proceedings of the 2019 IEEE European Symposium on Security and Privacy Workshops (**EuroS&PW**) - 1st Workshop on Attackers and Cyber-Crime Operations'
+venue: 'In Proceedings of the 2019 IEEE European Symposium on Security and Privacy Workshops (<b>EuroS&PWz</b>) - 1st Workshop on Attackers and Cyber-Crime Operations'
 open_access_link: "https://arxiv.org/abs/2009.08148"
 publisher_link: 'https://ieeexplore.ieee.org/abstract/document/8802484'
 authors: 'Campobasso, M.; Burda, P.; Allodi, L.'
