--- a/_publications/2020-08-20-impaas.md
+++ b/_publications/2020-08-20-impaas.md
@@ -6,7 +6,7 @@ award: Mention in ACM CCS 2020 Highlights
 award_link: https://www.acm.org/media-center/2020/october/ccs-2020
 acceptance_rate: 17%
 date: 2020-11-10
-venue: 'In Proceedings of the 2020 ACM SIGSAC Conference on Computer and Communications Security (CCS ’20)'
+venue: 'In Proceedings of the 2020 ACM SIGSAC Conference on Computer and Communications Security (<b>CCS 2020</b>)'
 open_access_link: 'https://dl.acm.org/doi/10.1145/3372297.3417892'
 authors: 'Campobasso, M.; Allodi, L.'
 appendix_title: Model derivation of an emerging threat from underground market observations
